--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
+    "babel-plugin-module-resolver": "^4.0.0",
     "n": "^6.5.1",
     "next": "^9.4.2",
     "react": "^16.13.1",
