--- a/package.json
+++ b/package.json
@@ -1,35 +1,41 @@
 {
-  "name": "ani",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "n": "^6.5.1",
-    "next": "^9.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "typescript": "^3.9.3"
-  },
-  "devDependencies": {
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^25.2.3",
-    "babel-jest": "^26.0.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
-    "jest": "^26.0.1",
-    "jest-watch-typeahead": "^0.6.0"
-  },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "test": "jest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "ani",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "dependencies": {
+        "@types/node": "^14.0.5",
+        "@types/react": "^16.9.35",
+        "babel-plugin-module-resolver": "^4.0.0",
+        "n": "^6.5.1",
+        "next": "^9.4.2",
+        "prettier": "^2.0.5",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "typescript": "^3.9.3"
+    },
+    "devDependencies": {
+        "@types/enzyme": "^3.10.5",
+        "@types/jest": "^25.2.3",
+        "babel-jest": "^26.0.1",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
+        "enzyme-to-json": "^3.5.0",
+        "jest": "^26.0.1",
+        "jest-watch-typeahead": "^0.6.0"
+    },
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start",
+        "test": "jest"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "es5",
+        "printWidth": 120
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
