--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "babel-plugin-module-resolver": "^4.0.0",
         "n": "^6.5.1",
         "next": "^9.4.2",
-        "prettier": "^2.0.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "typescript": "^3.9.3"
@@ -22,7 +21,8 @@
         "enzyme-adapter-react-16": "^1.15.2",
         "enzyme-to-json": "^3.5.0",
         "jest": "^26.0.1",
-        "jest-watch-typeahead": "^0.6.0"
+        "jest-watch-typeahead": "^0.6.0",
+        "prettier": "^2.0.5"
     },
     "scripts": {
         "dev": "next",
