--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "next": "^9.4.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "sass": "^1.26.5",
         "typescript": "^3.9.3"
     },
     "devDependencies": {
