--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.46",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "gsap": "^3.5.0",
     "n": "^6.5.1",
