Get content WIP

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "paths": {"@components/*": ["./components/*"]}
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/service.ts"]
 }
