--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.5",
+    "slugify": "^1.4.6",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
