--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.46",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "gsap": "^3.5.0",
     "next": "^10.0.3",
+    "prismic-reactjs": "^1.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.5",
