--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "sass": "^1.26.5",
     "slugify": "^1.4.6",
+    "styled-components": "^5.2.1",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
