--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^17.0.3",
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.0.0",
+    "firebase": "^8.3.2",
     "gsap": "^3.5.0",
     "next": "^10.0.3",
     "prismic-reactjs": "^1.3.3",
