--- a/package.json
+++ b/package.json
@@ -4,32 +4,30 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@prismicio/client": "^4.0.0",
-    "@types/node": "^14.0.5",
-    "@types/react": "^17.0.3",
-    "axios": "^0.21.1",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "firebase": "^8.3.2",
+    "@prismicio/client": "^5.1.0",
+    "@types/node": "^17.0.31",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "axios": "^0.21.4",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "firebase": "^9.0.2",
     "gsap": "^3.5.0",
-    "next": "^11.1.0",
+    "next": "^12.1.6",
+    "next-plausible": "^3.1.9",
     "prismic-reactjs": "^1.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.26.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "sass": "^1.41.1",
     "slugify": "^1.4.6",
-    "styled-components": "^5.2.1",
-    "typescript": "^4.2.3"
+    "styled-components": "^5.3.5",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^26.0.22",
-    "babel-jest": "^26.3.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "enzyme-to-json": "^3.5.0",
-    "jest": "^26.4.0",
+    "@types/jest": "^27.0.1",
+    "jest": "^27.2.0",
     "jest-watch-typeahead": "^0.6.0",
-    "prettier": "^2.0.5"
+    "prettier": "^2.4.1"
   },
   "scripts": {
     "dev": "next",
